--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "export": "next export"
-  },
+  "dev": "set NODE_OPTIONS=--openssl-legacy-provider && next dev",
+  "build": "set NODE_OPTIONS=--openssl-legacy-provider && next build",
+  "start": "set NODE_OPTIONS=--openssl-legacy-provider && next start"
+},
+
   "dependencies": {
     "16": "^0.0.2",
     "next": "10.2.3",
